pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/wrong-arity.rkt
#;
(exn-pred "wrong arity")
#lang typed/racket
(: f (Number Number -> Number))
(define (f x) 0)
